crates/deluge-macros/tests/ui/not_async.stderr
error: #[deluge::app] must be applied to an `async fn`
 --> tests/ui/not_async.rs:5:1
  |
5 | fn app() {}
  | ^^^^^^^^
