crates/deluge-macros/tests/ui/not_async.rs
// The entry point must be an `async fn`.
fn main() {}

#[deluge_macros::app]
fn app() {}
